# empatica_e4_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: DataArrays.msg
