##############################################################################
# CMake
##############################################################################

cmake_minimum_required(VERSION 2.8.3)
project(empatica_e4_msgs)

##############################################################################
# Dependencies
##############################################################################

find_package(catkin REQUIRED COMPONENTS message_generation std_msgs)

##############################################################################
# Messages
##############################################################################

add_message_files(
  DIRECTORY msg
  FILES
  DataArrays.msg
)

generate_messages(DEPENDENCIES std_msgs)

##############################################################################
# Package
##############################################################################

catkin_package(
  CATKIN_DEPENDS message_runtime std_msgs
)
